modules/update_security_group_rules/main.tf
resource "aws_security_group_rule" "allow_ec2_rds" {
  type              = "ingress"
  from_port         = 5432
  to_port           = 5432
  protocol          = "tcp"
  security_group_id = var.rds_security_group_id
  source_security_group_id = var.ec2_security_group_id
}

resource "aws_security_group_rule" "allow_lambda_rds" {
  type              = "ingress"
  from_port         = 5432
  to_port           = 5432
  protocol          = "tcp"
  security_group_id = var.rds_security_group_id
  source_security_group_id = var.lambda_security_group_id
}
